# 2dof-arm

./: .gitignore  CMakeLists.txt  arm.urdf  package.xml
config/: controller.yaml  pidcontroller.yaml
launch/: fortress.launch.py  gazebo.launch.py  robot.launch.py
scripts/: ik_solver.py  manual_joint_input.py  move_object.py  object_detect.py
urdf/: arm.urdf  arm.xacro.urdf  movable_object.xacro.urdf
