<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chintan1971@yahoo.com">chintan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros2_control</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_interfaces</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
